# sdl2-visual-explorer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  action.c  action.h  base.c  base.h  direction.c  display.c  display.h  entity.c  fractal.c  grid.c  hellodisplay.c  hellosdl.c  maze.c  state.c
.github/workflows/: ci.yml
app/: emerald_maze.c  fractal_explorer.c  maze_explorer.c
assets/: README.md
docs/: ARCHITECTURE.md
examples/: hello_display.c  hello_sdl.c
include/emerald/: action.h  direction.h  display.h  entity.h  fractal.h  grid.h  level.h  state.h
scripts/: capture_demos.sh  send_x_key.c
src/core/: action.c  base.c  direction.c  entity.c  fractal.c  grid.c  level.c  state.c
src/platform/: display.c
tests/: core_tests.c
